--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-cpugov-daemon (0.2.0-1) unstable; urgency=medium
+cpugov (0.3.0-1) unstable; urgency=medium
 
   * Initial release.
 
- -- CPUGov Contributors <cpugov@example.com>  Wed, 19 Feb 2026 12:00:00 -0400
+ -- Manuel "Serverket" Hernandez <serverket@mailfence.com>  Wed, 19 Feb 2026 12:00:00 -0400
