--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: cpugov 0.2.0\n"
+"Project-Id-Version: cpugov 0.3.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2026-02-19 13:00-0400\n"
 "PO-Revision-Date: 2026-02-19 13:00-0400\n"
@@ -28,8 +28,8 @@ msgid "CPUGov Contributors"
 msgstr "CPUGov 贡献者"
 
 #: src/application.py
-msgid "© 2026 CPUGov Contributors"
-msgstr "© 2026 CPUGov 贡献者"
+msgid "© 2026 Manuel \"Serverket\" Hernandez and Contributors"
+msgstr "© 2026 Manuel \"Serverket\" Hernandez 及其贡献者"
 
 #: src/window.py
 msgid "Connecting…"
@@ -86,3 +86,15 @@ msgstr "%(count)d 核心 (在线: %(online)s)"
 #: src/window.py
 msgid "Core %s"
 msgstr "核心 %s"
+
+#: src/window.py
+msgid "About CPU Governor"
+msgstr "关于 CPU 调速器"
+
+#: src/window.py
+msgid "Quit"
+msgstr "退出"
+
+#: src/application.py
+msgid "Manuel \"Serverket\" Hernandez"
+msgstr "Manuel \"Serverket\" Hernandez"
